2007-10-05  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.conf.5.in:  Update documentation.

	* config/ac_cerebro_metric_control_path.m4: Alter default metric
	control path to /var.
	
2007-10-01  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Replace /etc/init.d with %{initrddir}.
	
2007-09-18  Albert Chu  <chu11@llnl.gov>

	Re-do numbering for release.

	* META, NEWS: update for release

	* tagged cerebro-1-2-1
	
2007-09-17  Albert Chu  <chu11@llnl.gov>

	* man/cerebrod.8.in: Add restart information.

	* src/cerebro-stat/cerebro-stat.c, man/cerebro-stat.8.in,
	src/cerebro-admin/cerebro-admin.c, man/cerebro-admin.8.in: Re-do
	usage output and documentation per Py Watson
	(watson30 at llnl dot gov) suggestions.

	* tagged cerebro-1-1-6
	
2007-09-14  Albert Chu  <chu11@llnl.gov>

	* Fix compiler warnings.
	
2007-09-05  Albert Chu  <chu11@llnl.gov>

        * Fix FSF address throughout.
	
2007-04-03  Albert Chu  <chu11@llnl.gov>

	* tagged cerebro-1-1-5

	* META: update for release

	* cerebro.spec.in: Update.
	
2007-04-03  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (cerebrod_speaker): Fix
	mem-leak.

	* src/cerebrod/cerebrod_listener_data (metric_data_create): Add
	assert.

	* src/cerebrod/cerebrod_listener_data
	(cerebrod_listener_data_update): Fix metric names hash corner
	case.

	* src/cerebrod/cerebrod_event_update.c
	(_event_node_timeout_data_add, _event_node_timeout_data_callback):
	Add pthread lock checks.

	* src/cerebrod/cerebrod_event_server.c
	(_event_server_service_connection): Fix potential race condition.

	* src/cerebrod/cerebrod_event_server.c: Remove unused globals.

	* src/cerebrod/cerebrod_event_update.h,
	src/cerebrod/cerebrod_event_update.c
	(cerebrod_event_modules_setup, cerebrod_event_modules_update): Fix
	race condition.

	* Makefile.am: Dist out cerebro spec files.
	
2007-04-02  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c: Fix race condition.
	
2007-03-01  Albert Chu  <chu11@llnl.gov>
